Atualizando tela ao realizar login

--- a/frontend/src/app/registrar/registrar.component.html
+++ b/frontend/src/app/registrar/registrar.component.html
@@ -2,11 +2,9 @@
   <div class="row align-items-center justify-content-center">
     <div class="col-12 col-sm-8 col-md-6 col-lg-4">
       <div class="card">
-        <div class="text-center p-2">
-          <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" alt="User Image"
-            class="rounded-circle" />
+        <div class="card-header">
+          <h2 class="card-title text-center">Criar conta</h2>
         </div>
-
         <div class="card-body">
           <form *ngIf="!isSucesso" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
             <div class="form-group">
@@ -45,8 +43,15 @@
                 </div>
               </div>
             </div>
-            <div class="form-group text-right">
-              <button class="btn btn-primary btn-block">Cadastrar</button>
+            <div class="form-group">
+              <div class="row mt-2">
+                <div class="col-6">
+                  <a href="/login" routerLink="/login">Já possuo uma conta!</a>
+                </div>
+                <div class="col-6 text-right">
+                  <button class="btn btn-primary btn-block">Cadastrar</button>
+                </div>
+              </div>
             </div>
             <div class="alert alert-warning" *ngIf="f.submitted && isCadastroFalhou">
               Falha ao cadastrar!<br />{{ mensagemErro }}
