--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,25 +1,19 @@
 <div class="container-fluid vh-100 d-flex flex-column p-0" style="overflow: hidden">
   <nav class="navbar navbar-expand-sm navbar-dark bg-dark flex-shrink-0">
-    <div class="container-fluid">
+
       <a href="#" class="navbar-brand">Phone Rastreador</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-    </div>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto" routerLinkActive="active">
+      <ul class="navbar-nav mr-auto mb-2 mb-lg-0" routerLinkActive="active" [hidden]="!isConectado">
         <li class="nav-item">
           <a href="/home" class="nav-link" routerLink="home">Home</a>
         </li>
         <li class="nav-item">
-          <a href="/registrar" class="nav-link" routerLink="registrar">Criar Conta</a>
-        </li>
-        <li class="nav-item">
-          <a href="/login" class="nav-link" routerLink="login">Login</a>
-        </li>
-        <li class="nav-item">
-          <a href class="nav-link" (click)="desconectar()">LogOut</a>
+          <a href class="nav-link" (click)="desconectar()">Sair</a>
         </li>
       </ul>
     </div>
