--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -2,18 +2,18 @@
   <div class="row align-items-center justify-content-center">
     <div class="col-12 col-sm-8 col-md-6 col-lg-4">
       <div class="card">
-        <div class="text-center p-2">
-          <img id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="card-img-top rounded-circle"
-            alt="User Icon" />
+        <div class="card-header">
+          <h2 class="card-title text-center">Entrar</h2>
         </div>
+
         <div class="card-body">
           <form *ngIf="!isConectado" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
             <div class="form-group">
-              <label for="username">Username</label>
+              <label for="username">Usuário</label>
               <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required
                 #username="ngModel" />
               <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
-                Username é obrigatório!
+                Informe o usuário
               </div>
             </div>
             <div class="form-group">
@@ -21,17 +21,21 @@
               <input type="password" class="form-control" name="password" [(ngModel)]="form.senha" required minlength="6"
                 #password="ngModel" />
               <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
-                <div *ngIf="password.errors.required">Password is required</div>
+                <div *ngIf="password.errors.required">Senha é obrigatória</div>
                 <div *ngIf="password.errors.minlength">
                   Senha precisa ter pelo menos 6 caracteres
-
                 </div>
               </div>
             </div>
             <div class="form-group">
-              <button class="btn btn-primary btn-block">
-                Login
-              </button>
+              <div class="row mt-2">
+                <div class="col-6">
+                  <a href="/registrar" routerLink="/registrar">Não possui conta?</a>
+                </div>
+                <div class="col-6 text-right">
+                  <button class="btn btn-primary btn-block">Entrar</button>
+                </div>
+              </div>
             </div>
             <div class="form-group">
               <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFalhou">
@@ -39,10 +43,6 @@
               </div>
             </div>
           </form>
-
-          <div class="alert alert-success" *ngIf="isConectado">
-            Conectado com as permissões: {{ permissoes }}.
-          </div>
         </div>
       </div>
     </div>
