Alinhamento do mapa

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,5 +1,1 @@
-<div class="container">
-  <header class="jumbotron">
-    <p>Home {{ content }}</p>
-  </header>
-</div>
+<div id="map" class="flex-grow-1 h-100"></div>
