--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
-<div class="container-fluid vh-100 d-flex flex-column p-0" style="overflow: hidden">
-  <nav class="navbar navbar-expand-sm navbar-dark bg-dark flex-shrink-0">
+<div class="d-flex flex-column vh-100">
+  <header>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
 
       <a href="#" class="navbar-brand">Phone Rastreador</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -7,18 +8,19 @@
         <span class="navbar-toggler-icon"></span>
       </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto mb-2 mb-lg-0" routerLinkActive="active" [hidden]="!isConectado">
-        <li class="nav-item">
-          <a href="/home" class="nav-link" routerLink="home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a href class="nav-link" (click)="desconectar()">Sair</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="row flex-grow-1" style="overflow: auto;">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto mb-2 mb-lg-0" routerLinkActive="active" [hidden]="!isConectado">
+          <li class="nav-item">
+            <a href="/home" class="nav-link" routerLink="home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href class="nav-link" (click)="desconectar()">Sair</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <div class="flex-grow-1">
     <router-outlet></router-outlet>
   </div>
 </div>
