--- a/frontend/src/app/registrar/registrar.component.html
+++ b/frontend/src/app/registrar/registrar.component.html
@@ -34,7 +34,7 @@
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required
+              <input type="password" class="form-control" name="password" [(ngModel)]="form.senha" required
                 minlength="6" #password="ngModel" />
               <div class="alert-danger" *ngIf="password.errors && f.submitted">
                 <div *ngIf="password.errors.required">Password is required</div>
@@ -58,7 +58,10 @@
             </div>
           </form>
           <div class="alert alert-success" *ngIf="isSucesso">
-            Registrado com sucesso!
+            <p>
+              Registrado com sucesso!
+            </p>
+            <a href="/login">Clique aqui para se conectar!</a>
           </div>
         </div>
 
