Criação de tela para cadastro de dispositivos

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -11,7 +11,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto mb-2 mb-lg-0" routerLinkActive="active" [hidden]="!isConectado">
           <li class="nav-item">
-            <a href="/home" class="nav-link" routerLink="home">Home</a>
+            <a href="/home" class="nav-link" routerLink="home">Início</a>
+          </li>
+          <li class="nav-item">
+            <a href="/dispositivos" class="nav-link" routerLink="dispositivos">Dispositivos</a>
           </li>
           <li class="nav-item">
             <a href class="nav-link" (click)="desconectar()">Sair</a>
