--- a/frontend/src/app/registrar/registrar.component.html
+++ b/frontend/src/app/registrar/registrar.component.html
@@ -8,6 +8,19 @@
         <div class="card-body">
           <form *ngIf="!isSucesso" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
             <div class="form-group">
+              <label for="nome">Nome</label>
+              <input type="text" [(ngModel)]="form.nome" name="nome" #nome="ngModel" required minlength="2" maxlength="40" id="nome" class="form-control" />
+              <div class="alert-danger" *ngIf="nome.errors && f.submitted">
+                <div *ngIf="nome.errors.required">Nome é é obrigatório</div>
+                <div *ngIf="nome.errors.minlength">
+                  Nome precisa ter ao menos 2 caracteres
+                </div>
+                <div *ngIf="nome.errors.maxlength">
+                  Nome não pode ser maior que 40 caracateres
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
               <label for="username">Username</label>
               <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required minlength="3"
                 maxlength="20" #username="ngModel" />
