--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -18,3 +18,11 @@ html, body {
 .h-100 {
   height: 100%;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.cdk-overlay-container {
+  z-index: 2000 !important;
+}
